Update Сравнительный анализ готового прототипа и предпологаемой ИВР.md

--- a/Сравнительный анализ готового прототипа и предпологаемой ИВР.md
+++ b/Сравнительный анализ готового прототипа и предпологаемой ИВР.md
@@ -1,6 +1,6 @@
 **—делано:**
 
-	*Ѕазовые механики сражени€ и передвижени€ - не требуют серьезной доработке на данном этапе
+*Ѕазовые механики сражени€ и передвижени€ - не требуют серьезной доработке на данном этапе
 
 *Ѕазовые механики общени€ между игроками - отстутствие возможности индивидуального общени€
 
@@ -10,7 +10,7 @@
 
 *ѕрототип создани€ заклинаний - не соответствует изначальной идее, проста€ механика, мала€ свобода действий
 
-*ѕрототип древа исследований - не соответствует изначальной идее, плохон оформление, мала€ вариативность развити€
+*ѕрототип древа исследований - не соответствует изначальной идее, плохон оформление мала€ вариативность развити€
 
 *ѕрототип инвентар€ и экипировки - плоха€ визуализаци€
 
